buildscript {
  repositories {
    mavenCentral()
    gradlePluginPortal()
    mavenLocal()
    google()
    maven { url = 'https://central.sonatype.com/repository/maven-snapshots/' }
  }
  dependencies {


  }
}

allprojects {
  apply plugin: 'eclipse'
  apply plugin: 'idea'

  if (!tasks.names.contains('prepareKotlinBuildScriptModel')) {
    tasks.register('prepareKotlinBuildScriptModel')
  }

  // This allows you to "Build and run using IntelliJ IDEA", an option in IDEA's Settings.
  idea {
    module {
      outputDir = file('build/classes/java/main')
      testOutputDir = file('build/classes/java/test')
    }
  }
}

tasks.register('classes') {
  dependsOn subprojects.collect { it.tasks.matching { task -> task.name == 'classes' } }
}

configure(subprojects) {
  apply plugin: 'java-library'
  java.sourceCompatibility = 21
  java.toolchain.languageVersion = JavaLanguageVersion.of(21)

  compileJava {
    options.incremental = true
  }
}

subprojects {
  version = "$projectVersion"
  ext.appName = 'The Dragon Conquerors'
  repositories {
    mavenCentral()
    // You may want to remove the following line if you have errors downloading dependencies.
    mavenLocal()
    maven { url = 'https://central.sonatype.com/repository/maven-snapshots/' }
    maven { url = 'https://jitpack.io' }
  }
}

eclipse.project.name = 'The Dragon Conquerors' + '-parent'
